# trademetrix-terminal

./: .gitignore  FEATURE_MATRIX.md  LAUNCH_READINESS.md  SALES_TRAINING.md  start.sh
apps/api/: .dockerignore  .env.example  .env.vault  .env.vault.example  .gitignore  Dockerfile  PRODUCTION_AUDIT.md  alembic.ini  main.py  pyproject.toml  requirements.txt
apps/api/ai/: __init__.py  chat.py  copilot.py  desk.py  journal.py  openrouter.py  sales_context.py  strategy_builder.py  training_context.py
apps/api/alembic/: env.py
apps/api/backtest/: __init__.py  data_loader.py  manager.py  models.py  performance.py  replay_engine.py
apps/api/brokers/: __init__.py  aliceblue_adapter.py  angelone_adapter.py  base.py  dhan_adapter.py  finvasia_adapter.py  fivepaisa_adapter.py  flattrade_adapter.py  fyers_adapter.py  groww_adapter.py  kotakneo_adapter.py  registry.py  token_manager.py  update_tokens.py  upstox_adapter.py  zerodha_adapter.py
apps/api/builder/: __init__.py  blocks.py  compiler.py  io.py  manager.py  models.py  preview.py  strategy.py  templates.py
apps/api/core/: audit.py  cache.py  capabilities.py  config.py  constants.py  db.py  deps.py  email.py  events.py  exceptions.py  http_client.py  logging.py  metrics.py  migrate.py  models.py  notifications.py  prometheus.py  ratelimit.py  resilience.py  response.py  safe_query.py  security.py  sentry.py  supabase_schema.sql  tracing.py  vault.py
apps/api/docs/: BacktestingArchitecture.md  BrokerCertification.md  BrokerCertification_v2.md  BrokerExecutionArchitecture.md  ExecutionIntegration.md  (+7 more)
docs/: API.md  (+17 more)
(+367 files in other folders)
