[project]
name = "trademetrix-api"
version = "0.1.0"
description = "Trade Metrix Trading Terminal — FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "supabase>=2.0",
    "cryptography>=42.0",
    "argon2-cffi>=23.0",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2]>=1.7",
    "python-multipart>=0.0.9",
    "google-genai>=1.0",
    "apscheduler>=3.10",
    "pandas>=2.0",
    "numpy>=1.26",
    "ta-lib>=0.5",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
disallow_untyped_defs = true
ignore_missing_imports = true
